--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,16 @@
 {
+ "npmClient": "yarn",
+  "version": "independent",
+  "useWorkspaces": true,
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.0"
+  "command": {
+    "publish": {
+      "npmClient": "npm",
+      "verifyAccess": false,
+      "ignoreChanges": ["*.md", "**/test/**"],
+      "message": "chore(release): publish"
+    }
+  }
 }
