--- a/packages/queue/package.json
+++ b/packages/queue/package.json
@@ -6,12 +6,12 @@
     "queue",
     "queue-js",
     "queue es6",
-    "queue js",
+    "queue js"
   ],
   "author": "chenguzhen87 <546369005@qq.com>",
   "homepage": "https://github.com/parajs/datastruct#readme",
   "license": "ISC",
-  "main": "src/queue.js",
+  "main": "lib/queue.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -31,5 +31,9 @@
   },
   "bugs": {
     "url": "https://github.com/parajs/datastruct/issues"
+  },
+  "dependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.2.0"
   }
 }
